--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ env:
 script:
   - pipenv run pycodestyle
   - find . -iname "*.py" | xargs pipenv run pylint
-  - pipenv run pytest
+  - pipenv run pytest --cov
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
