Putting some diagnostics into travis output

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,7 @@ script:
   - pipenv run python manage.py compilescss && git diff --no-ext-diff --exit-code
   - pipenv check
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ls -al
+  - cat .coverage
+  - car coverage.xml
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT --coverage-input-type coverage.py
