--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 script:
   - pipenv run pycodestyle
   - find . -iname "*.py" | xargs pipenv run pylint
-  - pipenv run pytest --cov-report=xml
+  - pipenv run pytest --cov=.
   - pipenv run python manage.py compilescss && git diff --no-ext-diff --exit-code
   - pipenv check
 after_script:
