--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ gunicorn = "*"
 raven = "*"
 django-widget-tweaks = "*"
 django-tz-detect = "*"
+django-model-utils = "*"
 
 [dev-packages]
 pycodestyle = "*"
