--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ raven = "*"
 django-widget-tweaks = "*"
 django-tz-detect = "*"
 django-model-utils = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 pycodestyle = "*"
