--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ django = "*"
 django-heroku = "*"
 django-sass-processor = "*"
 pillow = "*"
-"psycopg2-binary" = "*"
+psycopg2 = "*"
 gunicorn = "*"
 raven = "*"
 django-widget-tweaks = "*"
@@ -18,8 +18,8 @@ django-debug-toolbar = "*"
 
 [dev-packages]
 pycodestyle = "*"
-pylint = "*"
-pylint-django = "*"
+# pylint = "*"
+# pylint-django = "*"
 pytest-django = "*"
 factory-boy = "*"
 pytz = "*"
@@ -29,6 +29,3 @@ pytest-cov = "*"
 ipython = "*"
 libsass = "*"
 django-compressor = "*"
-
-[requires]
-python_version = "3.6"
