--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,5 @@
 [MASTER]
-load-plugins = pylint.extensions.mccabe
+load-plugins = pylint.extensions.mccabe, pylint_django
 ignore-patterns = manage.py, \d{4}.*.py
 good-names = application, urlpatterns, i, j, k
 
