--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
   DATABASE_URL: postgresql://postgres:postgres@localhost/will_of_the_prophets/
 script:
   - pipenv run pycodestyle
-  - # find . -iname "*.py" | xargs pipenv run pylint
+  - find . -iname "*.py" | xargs pipenv run pylint
   - pipenv run pytest --cov=. --cov-report=xml
   - pipenv run python manage.py compilescss && git diff --no-ext-diff --exit-code
   - pipenv check
