--- a/.pylintrc
+++ b/.pylintrc
@@ -21,5 +21,5 @@ function-rgx = (([a-z_][a-z0-9_]{2,40})|(_[a-z0-9_]*)|(__[a-z][a-z0-9_]+__))$
 [SIMILARITIES]
 ignore-imports=yes
 
-[FORMAT]
-indent-after-paren=4
+[MESSAGES CONTROL]
+disable = bad-continuation  # https://github.com/PyCQA/pylint/issues/289
