Install Enchant on Travis for spell check testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 services: postgresql
 install:
   - pip install pipenv
+  - sudo apt-get -y install libenchant1c2a
   - pipenv install --dev
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
