--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,8 @@ libsass = "*"
 django-compressor = "*"
 model-mommy = "*"
 black = "==18.9b0"
-pylint = "*"
+pylint = "< 2.3"  # https://github.com/PyCQA/pylint-plugin-utils/issues/12
 pylint-django = "*"
 isort = "*"
 pyenchant = "*"
+astroid = "< 2.2"  # https://github.com/PyCQA/astroid/issues/649
