Move to new sentry library and use CSP nonce.

--- a/Pipfile
+++ b/Pipfile
@@ -9,13 +9,14 @@ django-heroku = "*"
 django-sass-processor = "*"
 psycopg2 = "*"
 gunicorn = "*"
-raven = "*"
 django-widget-tweaks = "*"
 django-tz-detect = "*"
 django-model-utils = "*"
 django-debug-toolbar = "*"
 django-s3direct = "*"
 django-csp = "*"
+sentry-sdk = "*"
+django-csp-nonce = "*"
 
 [dev-packages]
 pytest = "*"
