Mommy becomes a baker.

--- a/Pipfile
+++ b/Pipfile
@@ -30,9 +30,9 @@ pytest-cov = "*"
 ipython = "*"
 libsass = "*"
 django-compressor = "*"
-model-mommy = "*"
 black = "==19.3b0"
 pylint = "*"
 pylint-django = "*"
 isort = "*"
 pyenchant = "*"
+model-bakery = "*"
