--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "< 3"
 django-heroku = "*"
 django-sass-processor = "*"
 psycopg2 = "*"
