--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ pylint-django = "*"
 isort = "*"
 pyenchant = "*"
 model-bakery = "*"
+freezegun = "==0.3.12"
 
 [requires]
 python_version = "3.8"
