--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             sudo apt-get -y install libenchant1c2a npm libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
             sudo pip install pipenv
             pipenv install --dev
-            npm install
+            npm ci
 
       - run:
           name: collect static files
