--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,41 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
-version: 2
+version: 2.1
+
 jobs:
-  build:
-    working_directory: ~/will-of-the-prophets
+  setup:
     docker:
       - image: circleci/python:3.8
         environment:
           DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
           DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+    steps:
+      - checkout
+      - run: |
+          sudo pip install pipenv
+          pipenv install --dev
+      - save_cache:
+          paths:
+            - ~/project
+          key: will-of-the-prophets-{{ .Revision }}
+
+  cypress:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
       - image: circleci/postgres:11
         environment:
           POSTGRES_USER: will_of_the_prophets
           POSTGRES_PASSWORD: security_is_important
           POSTGRES_DB: will_of_the_prophets
-
-    environment:
-      SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
-
     steps:
-      - checkout
-
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
       - run:
-          name: install dependencies
-          command: |
-            sudo apt-get -y install libenchant1c2a npm libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
-            sudo pip install pipenv
-            pipenv install --dev
-            npm ci
-
-      - run:
-          name: collect static files
-          command: pipenv run python manage.py collectstatic --no-input
-
-      - run:
-          name: run tests
-          command: pipenv run pytest --log-level DEBUG
-
-      - run:
-          name: run end-to-end tests
           environment:
             DJANGO_SUPERUSER_USERNAME: rollinguser
             DJANGO_SUPERUSER_PASSWORD: "rolling user password"
@@ -48,35 +43,137 @@ jobs:
             DEBUG: 1
             DISABLE_DEBUG_TOOLBAR: 1
           command: |
+            sudo apt-get -y install npm libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+            npm ci
             pipenv run python manage.py migrate
             pipenv run python manage.py createsuperuser --noinput
             pipenv run python manage.py runserver & npm run wait-on http://localhost:8000
             npm run cypress run
 
-      - run:
-          name: deployment check
-          command: pipenv run python manage.py check --deploy --fail-level INFO
+  pytest:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+      - image: circleci/postgres:11
+        environment:
+          POSTGRES_USER: will_of_the_prophets
+          POSTGRES_PASSWORD: security_is_important
+          POSTGRES_DB: will_of_the_prophets
+    steps:
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
+      - run: |
+          pipenv run python manage.py collectstatic
+          pipenv run pytest --log-level DEBUG
 
-      - run:
-          name: check for missing migrations
-          command: pipenv run python manage.py makemigrations --check
+  deploy_check:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+    steps:
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
+      - run: pipenv run python manage.py check --deploy --fail-level INFO
 
+  missing_migrations:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+      - image: circleci/postgres:11
+        environment:
+          POSTGRES_USER: will_of_the_prophets
+          POSTGRES_PASSWORD: security_is_important
+          POSTGRES_DB: will_of_the_prophets
+    steps:
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
+      - run: pipenv run python manage.py makemigrations --check
+
+  python_formatting:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+    steps:
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
       - run:
-          name: check code formatting
           command: |
-            pipenv run black --check --diff .
-            pipenv run isort --check-only
-            find . -iname "*.py" | xargs pipenv run pylint
+              pipenv run black --check --diff .
+              pipenv run isort --check-only
 
+  python_linting:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+    steps:
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
       - run:
-          name: check CSS
+          command: |
+            sudo apt-get -y install libenchant1c2a
+            find . -path ./.venv -prune -o -iname "*.py" -print
+            find . -path ./.venv -prune -o -iname "*.py" -print | xargs pipenv run pylint
+
+  check_css_build:
+    docker:
+      - image: circleci/python:3.8
+        environment:
+          DATABASE_URL: postgresql://will_of_the_prophets:security_is_important@localhost/will_of_the_prophets
+          DATABASE_NO_SSL_REQUIRE: True
+          SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789
+          PIPENV_VENV_IN_PROJECT: True
+    steps:
+      - restore_cache:
+          key: will-of-the-prophets-{{ .Revision }}
+      - run:
           command: |
             pipenv run python manage.py compilescss
             git diff --no-ext-diff --exit-code
 
-      - store_test_results:
-          path: test-results
 
-      - store_artifacts:
-          path: test-results
-          destination: tr1
+workflows:
+  version: 2
+  test:
+    jobs:
+      - setup
+      - cypress:
+          requires:
+            - setup
+      - pytest:
+          requires:
+            - setup
+      - deploy_check:
+          requires:
+            - setup
+      - missing_migrations:
+          requires:
+            - setup
+      - python_formatting:
+          requires:
+            - setup
+      - python_linting:
+          requires:
+            - setup
+      - check_css_build:
+          requires:
+            - setup
