--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,8 @@ jobs:
       - run:
           name: check code formatting
           command: |
+            npm run prettier -- **/*.scss --check
+            npm run prettier -- **/*.js --check
             pipenv run black --check --diff .
             pipenv run isort --check-only
             find . -iname "*.py" | xargs pipenv run pylint
