--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "cypress": "$(npm bin)/cypress",
-    "wait-on": "$(npm bin)/wait-on"
+    "wait-on": "$(npm bin)/wait-on",
+    "prettier": "$(npm bin)/prettier"
   },
   "dependencies": {
     "cypress": "^4.4.0",
+    "prettier": "^2.0.4",
     "wait-on": "^4.0.2"
   }
 }
