--- a/app.json
+++ b/app.json
@@ -1,21 +1,18 @@
 {
   "name": "will-of-the-prophets",
   "description": "",
-  "scripts": {
-  },
+  "scripts": {},
   "env": {
-      "SECRET_KEY": {
-          "generator": "secret"
-      }
+    "SECRET_KEY": {
+      "generator": "secret"
+    }
   },
   "formation": {
     "web": {
       "quantity": 1
     }
   },
-  "addons": [
-    "heroku-postgresql"
-  ],
+  "addons": ["heroku-postgresql"],
   "buildpacks": [
     {
       "url": "heroku/python"
