--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "prettier": "$(npm bin)/prettier"
   },
   "dependencies": {
-    "cypress": "^4.7.0",
-    "prettier": "^2.0.5",
-    "wait-on": "^5.0.0"
+    "cypress": "latest",
+    "prettier": "latest",
+    "wait-on": "latest"
   }
 }
