--- a/.github/workflows/scss.yaml
+++ b/.github/workflows/scss.yaml
@@ -39,9 +39,8 @@ jobs:
           python-version: 3.8
       - name: Setup
         run: |
-          pip install pipenv
-          pipenv install --dev
+          pip install --requirement requirements.txt
       - name: Make CSS and compare with GitHub
         run: |
-          pipenv run python manage.py compilescss
+          python manage.py compilescss
           git diff --no-ext-diff --exit-code
