--- a/.github/workflows/scss.yaml
+++ b/.github/workflows/scss.yaml
@@ -3,11 +3,6 @@ on:
   pull_request:
     branches:
       - "*"
-  push:
-    paths:
-      - "**/*.scss"
-      - ".github/workflows/scss.yaml"
-      - "Makefile"
 
 jobs:
   lint-scss:
@@ -20,11 +15,11 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 21
       - name: Setup
-        run: npm install prettier@`cat package-lock.json | jq ".dependencies.prettier.version" --raw-output`
+        run: npm ci
       - name: Lint SCSS
-        run: make lint-scss
+        run: npx prettier  --check -- "**/*.scss"
 
   latest-scss:
     name: Test the latest SCSS was commited
