--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -3,10 +3,6 @@ on:
   pull_request:
     branches:
       - "*"
-  push:
-    paths:
-      - "**/*.yaml"
-      - "Makefile"
 
 jobs:
   lint-yaml:
@@ -19,8 +15,8 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 21
       - name: Setup
-        run: npm install prettier@`cat package-lock.json | jq ".dependencies.prettier.version" --raw-output`
+        run: npm ci
       - name: Lint YAML
-        run: make lint-yaml
+        run: npx prettier --check -- "**/*.yaml"
