Run Cypress tests against Heroku app (#1432)
* Run Cypress tests against Heroku app

* Prepare to import 2024 data.

--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,7 @@ will_of_the_prophets/fixtures/legacy_rolls.json
 
 /node_modules/
 /cypress/plugins/
-/cypress/support/
 /cypress/videos/
 /cypress/fixtures/
 /cypress/screenshots/
+/cypress.env.json
